fix: remove wrong padding in notification stylesheet (#43)

--- a/src/scss/notification.scss
+++ b/src/scss/notification.scss
@@ -34,7 +34,6 @@
 	opacity: 1;
 	padding-block: var(--z-ds-space-12);
 	padding-inline: var(--z-ds-space-16) var(--z-ds-space-56);
-	padding: 0;
 	position: fixed;
 	right: 0;
 	top: auto;
